public/sass/partials/_content.scss
// @TODO: CLEAN UP
.content-container {
	background: #FFF;
	border: 10px solid #e6e6e6;
	padding: 1em;
	a {
		color: #0096D6;
		//border-bottom: 1px dotted #0096D6;
		&:hover { 
			//border-color: darken(#0096D6, 15%);
			color: darken(#0096D6, 15%);
		}
	}
}
	.content__feature {
		border: $crumb-border-size $crumb-border-style $crumb-border-color;
		border-bottom: none;
		height: 300px;
	}
		.content_feature-title {
			background: rgba(#FFD200, .3);
			font-weight: bold;
			color: #FFF;
			line-height: 300px;
			padding: 0 1em;
			margin: 0;
			text-transform: uppercase;
			@include single-transition;
			&:hover {
				background: rgba(#FFD200, .5);
			}
		}
		.content__feature--enactus {
			background: image-url('photos/about-enactus.jpg') no-repeat center top;
			@include background-size(cover);
		}
		.content__feature--about {
			background: image-url('photos/about-us.jpg') no-repeat center top;
			@include background-size(cover);
		}
		.content__feature--bab {
			background: image-url('photos/about-bab.jpg') no-repeat center top;
			@include background-size(cover);
		}
		.content__feature--social {
			background: image-url('photos/projects-social.jpg') no-repeat center top;
			@include background-size(cover);
		}
		.content__feature--commercial {
			background: image-url('photos/projects-commercial.jpg') no-repeat center top;
			@include background-size(cover);
		}
		.content__feature--project {
			background: image-url('photos/projects-new.jpg') no-repeat center top;
			@include background-size(cover);
		}
	.content__milestones {
		margin-bottom: 1.5em !important;
	}

.landing--title {
	font-weight: 300;
}

.landing__jumbotron .landing--title {
	color: #FFF;
	> .subheader {
		color: $secondary-color;
		font-weight: bold;
	}
}

.landing__mission {
	background: #e6e6e6;
	display: block;
	padding-top: 2em;
	padding-bottom: 2em;
	&:hover {
		background: #EF4656;
		.landing--title, .subheader { color: #FFF }
	}
	.subheader {
		color: $alert-color;
		font-weight: normal;
	}
}

.landing__action {
	background: #e6e6e6;
	border-top: 1px solid darken(#e6e6e6, 15%);
	.columns {
		padding-top: 2em;
		padding-bottom: 2em;
	}
	.landing--title {
		font-weight: normal;
	}
	p {
		font-weight: 300;
	}
}
	.landing__action--opportunities {
		border-right: 1px solid darken(#e6e6e6, 15%);
	}

